@@ -1,5 +1,8 @@
 2001-03-25  Bharat Mediratta  <bharat@menalto.com>
 
+	* Fixed a bug in the setup code that caused you not to see the
+	  details when the magic-quotes check fails.
+
 	* Cleaned up the instructions you receive when gallery is un- or
 	  mis-configured.
 
